Lab0022/Api Documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.urls[0].name=pacientes
+springdoc.swagger-ui.urls[0].url=/api-docs/pacientes
