--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.urls[0].name=pacientes
 springdoc.swagger-ui.urls[0].url=/api-docs/pacientes
+springdoc.swagger-ui.urls[1].name=consultas
+springdoc.swagger-ui.urls[1].url=/api-docs/consultas
