--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ springdoc.swagger-ui.urls[0].name=pacientes
 springdoc.swagger-ui.urls[0].url=/api-docs/pacientes
 springdoc.swagger-ui.urls[1].name=consultas
 springdoc.swagger-ui.urls[1].url=/api-docs/consultas
+springdoc.swagger-ui.urls[2].name=exames
+springdoc.swagger-ui.urls[2].url=/api-docs/exames
