--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ springdoc.swagger-ui.urls[1].name=consultas
 springdoc.swagger-ui.urls[1].url=/api-docs/consultas
 springdoc.swagger-ui.urls[2].name=exames
 springdoc.swagger-ui.urls[2].url=/api-docs/exames
+springdoc.swagger-ui.urls[3].name=dashboard
+springdoc.swagger-ui.urls[3].url=/api-docs/dashboard
