--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,6 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
@@ -17,3 +16,7 @@ springdoc.swagger-ui.urls[2].name=exames
 springdoc.swagger-ui.urls[2].url=/api-docs/exames
 springdoc.swagger-ui.urls[3].name=dashboard
 springdoc.swagger-ui.urls[3].url=/api-docs/dashboard
+
+jwt.private.key=classpath:private-key.pem
+jwt.public.key=classpath:public-key.pem
+jwt.expiration=86400000
