--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ springdoc.swagger-ui.urls[2].name=exames
 springdoc.swagger-ui.urls[2].url=/api-docs/exames
 springdoc.swagger-ui.urls[3].name=dashboard
 springdoc.swagger-ui.urls[3].url=/api-docs/dashboard
+springdoc.swagger-ui.urls[4].name=usuarios
+springdoc.swagger-ui.urls[4].url=/api-docs/usuarios
 
 jwt.private.key=classpath:private-key.pem
 jwt.public.key=classpath:public-key.pem
