--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,4 @@ springdoc.swagger-ui.urls[4].url=/api-docs/usuarios
 
 jwt.private.key=classpath:private-key.pem
 jwt.public.key=classpath:public-key.pem
-jwt.expiration=86400000
+jwt.expiration=600000
