--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "devDependencies": {
-    "cypress": "^13.13.1"
+    "cypress": "^13.13.1",
+    "faker": "^6.6.6"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "pg": "^8.12.0"
   }
 }
